k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oracle-app
  labels:
    app: oracle
spec:
  replicas: 2
  selector:
    matchLabels:
      app: oracle
  template:
    metadata:
      labels:
        app: oracle
    spec:
      containers:
      - name: oracle
        image: yavuzkaramert/homelab-oracle:0d49f71de847989a12cd1abb213bc6ab0ba742ed
        ports:
        - containerPort: 8000
        resources:
          limits:
            memory: "128Mi"
            cpu: "200m"
